RESOLVED FIXED153975
Parser should detect error before calls to parseAssignmentExpression()
https://bugs.webkit.org/show_bug.cgi?id=153975
Summary Parser should detect error before calls to parseAssignmentExpression()
Filip Pizlo
Reported 2016-02-07 23:05:50 PST
Patch forthcoming.
Attachments
the patch (1.95 KB, patch)
2016-02-07 23:11 PST, Filip Pizlo
no flags
the patch (1.95 KB, patch)
2016-02-07 23:12 PST, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2016-02-07 23:11:26 PST
Created attachment 270845 [details] the patch
Filip Pizlo
Comment 2 2016-02-07 23:12:18 PST
Created attachment 270846 [details] the patch
Saam Barati
Comment 3 2016-02-08 09:08:51 PST
Comment on attachment 270846 [details] the patch I'm surprised we only had one such call site :)
Filip Pizlo
Comment 4 2016-02-08 10:51:46 PST
(In reply to comment #3) > Comment on attachment 270846 [details] > the patch > > I'm surprised we only had one such call site :) Maybe there are others?
Filip Pizlo
Comment 5 2016-02-08 10:53:23 PST
Note You need to log in before you can comment on or make changes to this bug.