Parser should detect error before calls to parseAssignmentExpression() https://bugs.webkit.org/show_bug.cgi?id=153975 rdar://problem/24291231

Reviewed by Saam Barati.

Fixes a very hard-to-create situation that an internal test picked up.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseVariableDeclarationList):
(JSC::Parser<LexerType>::parseAssignmentExpression):



Canonical link: https://commits.webkit.org/172085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196258 268f45cc-cd09-0410-ab3c-d52691b4dbfc